fix: Menu items now have contrast with hamburger menu background

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,6 +151,10 @@ code {
     margin: 1rem 0;
     text-align: center;
   }
+
+  .mobile-menu a {
+    @apply text-neutral-50;
+  }
 }
 
 .nav-links {
